examples/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: my-application
  labels:
    app: dmz-controller-example
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: my-application
    spec:
      containers:
      - name: nginx
        image: nginx:1.13.3
        ports:
        - containerPort: 80
