examples/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-application-service
spec:
  selector:
    app: my-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
